--- a/css/style.css
+++ b/css/style.css
@@ -88,10 +88,11 @@ a{
 	font-size: 25px;
 	border-radius: 5px;
 	border-style: solid;
-	width: 18%;
+	width: 18.7%;
 	height: 5%;
-	margin-left: 28%;
+	margin-left: 27.5%;
 	margin-top: 37.5%;
+	letter-spacing: 1px;
 }
 #bot2{
 	z-index: 4;
@@ -101,18 +102,19 @@ a{
 	font-size: 25px;
 	border-radius: 5px;
 	border-style: solid;
-	width: 18%;
+	width: 18.7%;
 	height: 5%;
-	margin-left: 49%;
+	margin-left: 49.5%;
 	margin-top: 37.5%;
+	letter-spacing: 1px;
 }
 #branco{
 	position: absolute;
 	z-index: 1;
 	background-color: #FFF;
 	margin-top: 58.8%;
-	width: 100%;
-	height: 100%;
+	width: 99%;
+	height: 200%;
 }
 #comp{
 	position: absolute;
@@ -120,8 +122,36 @@ a{
 	margin-left: 12.5%;
 	margin-top: 5%;
 }
-#mattext{
+#material{
 	position: absolute;
-	z-index: 5;
+	z-index: 6;
+	margin-top: 3.5%;
+	margin-left: 42%;
 	color: #F16529;
+	letter-spacing: 7px;
+	font-size: 17.5px;
+}
+#text1{
+	font-size: normal;
+	color: #000;
+	letter-spacing: 0px;
+	margin-right: 24%;
+	text-align: justify;
+	font-size: 15px;
+}
+#parte3{
+	z-index: 1;
+	position: absolute;
+	border-style: solid;
+	border-color: #E2E5EB;
+	border-width: 1.4px;
+	width: 99%;
+	height: 82%;
+	margin-top: 83%;
+}
+#titparte3{
+	color: #F16529;
+	letter-spacing: 7px;
+	font-size: 33px;
+
 }
