--- a/css/style.css
+++ b/css/style.css
@@ -1,157 +1,309 @@
 body{
 	background-color: #161310;
 	font-family: 'Montserrat', sans-serif;
-
+	margin: 0px;
+	padding: 0px;
+	color: #fff;
 }
 a{
 	color: white;
 	text-decoration: none;
 }
-#lat1{
-	background-color: #0E0E0E;
-	margin-left: -1%;
-	margin-top: -1%;
-	width: 12.5%;
-	height: 300%;
-	position: absolute;
-	z-index: 2;
+article{
+	color: #000;
 }
-#lat2{
-	background-color: #0E0E0E;
-	margin-left: 87.5%;
-	margin-top: -1%;
-	width: 11.9%;
-	height: 300%;
-	position: absolute;
-	z-index: 2;
+.container1{
+	background-image: url("../images/banner.jpg"); 
+    background-size: 1366px; 
+    width: auto;
+	overflow: hidden;
+    max-width: 1366px;
+    height: auto;
+    margin-right: auto;
+    margin-left: auto;
+    filter: contrast(120%);
 }
-#all{
-}
-#PCs{
-	position: absolute;
-	margin-left: 1.2%;
-	margin-top: -0.6%;
-	width: 89%;
-	filter: contrast(150%);
-	opacity: 0.6;
-}
-#nav{
-	position: absolute;
-	margin-left: 11%;
-	margin-top: -1%;
-	margin-bottom: 0.6%;
-	background-color: rgba(23, 20, 17, 0.7);
-	filter: alpha(65%);
-	width: 76%;
-	height: 16%;
+.section1{
+	background-color: #FFF;
+	margin-top: 25%;
+	width: 100%;
+	height: 400px;
+	overflow: hidden;
+	border-color: #AAA;
 	border-style: solid;
-	border-width: 1px;
-	z-index: 1;
+	border-width: 0.5px;
 }
-#logo{
-	margin-top: 4.7%;
-	margin-left: 5%;
-	position: absolute;
+.section2{
+	background-color: #FFF;
+	margin-top: 0px;
+	width: 100%;
+	height: 510px;
+	overflow: hidden;
+	border-bottom-color: #AAA;
+	border-bottom-style: solid;
+	border-bottom-width: 0.5px;
 }
-#itens{
-	margin-left: 61.8%;
+.imgsec1{
+	margin-top: 5%;
+	margin-left: 2%;
+	margin-right: 10%;
+	float: left;
 }
-#ulmenu li{
-	margin-top: 3%;
-	position: absolute;
-	list-style: none;
-	font-size: 18px;
-	color: #FFF;
+.artsec1{
+	margin-left: 13%;
+	margin-top:  12%;
+	text-align: justify;
+	width: 1000px;
+	font-weight: bold;
 }
-#categorias{
+.material{
+	font-size: 35px;
+	color: #F16529;
+	letter-spacing: 5px;
+	float: left;
+	margin-top: 6%;
 	margin-left: 6%;
 }
-#blog{
-	margin-left: 16.5%;
+.material2{
+	font-size: 35px;
+	color: #F16529;
+	letter-spacing: 5px;
+	float: left;
+	margin-left: 27%;
+	margin-right: 27%;
 }
-#membros{
-	margin-left: 22%;
+.material3{
+	color: #A72D3A;
+	font-size: 35px;
+	letter-spacing: 5px;
+	float: left;
+	margin-left: 38%;
+	margin-right: 38%;
 }
-#aprenda{
-	z-index: 4;
-	position: absolute;
-	color: #FFF;
-	margin-top: 21%;
-	margin-left: 20%;
-	font-size: 52px;
-}
-#bot1{
-	z-index: 4;
-	padding: 1%;
-	position: absolute;
-	color: #FFF;
-	font-size: 25px;
-	border-radius: 5px;
+.top-header{
 	border-style: solid;
-	width: 18.7%;
-	height: 5%;
-	margin-left: 27.5%;
-	margin-top: 37.5%;
-	letter-spacing: 1px;
+	border-width: 1px;
+	border-color: #000;
+	background-color: rgba(23, 20, 17, 0.3);
+	overflow: hidden;
 }
-#bot2{
-	z-index: 4;
-	padding: 1%;
-	position: absolute;
-	color: #FFF;
-	font-size: 25px;
-	border-radius: 5px;
+.card1{
+	background-color: #D65B43;
 	border-style: solid;
-	width: 18.7%;
-	height: 5%;
-	margin-left: 49.5%;
-	margin-top: 37.5%;
-	letter-spacing: 1px;
+	border-color: #D9D9D9;
+	border-width: 1px;
+	width: 220px;
+	height: 320px;
+	box-shadow: 2px 2px #D9D9D9;
+	margin-left: 75px;
+	float: left;
 }
-#branco{
-	position: absolute;
-	z-index: 1;
+.card2{
+	background-color: #D65B43;
+	border-style: solid;
+	border-color: #D9D9D9;
+	border-width: 1px;
+	width: 220px;
+	height: 320px;
+	box-shadow: 2px 2px #D9D9D9;
+	margin-left: 100px;
+	float: left;
+}
+.card3{
+	background-color: #48B7E6;
+	border-style: solid;
+	border-color: #D9D9D9;
+	border-width: 1px;
+	width: 220px;
+	height: 320px;
+	box-shadow: 2px 2px #D9D9D9;
+	margin-left: 100px;
+	float: left;
+}
+.card4{
+	background-color: #F3CA4B;
+	border-style: solid;
+	border-color: #D9D9D9;
+	border-width: 1px;
+	width: 220px;
+	height: 320px;
+	box-shadow: 2px 2px #D9D9D9;
+	margin-left: 100px;
+	margin-right: 75px;
+	float: left;
+}
+.card5{
+	background-color: #B21300;
+	border-style: solid;
+	border-color: #D9D9D9;
+	border-width: 1px;
+	width: 220px;
+	height: 320px;
+	box-shadow: 2px 2px #D9D9D9;
+	margin-left: 75px;
+	float: left;
+}
+.card6{
+	background-color: #A72D3A;
+	border-style: solid;
+	border-color: #D9D9D9;
+	border-width: 1px;
+	width: 220px;
+	height: 320px;
+	box-shadow: 2px 2px #D9D9D9;
+	margin-left: 100px;
+	float: left;
+}
+.card7{
+	background-color: #8A2BFF;
+	border-style: solid;
+	border-color: #D9D9D9;
+	border-width: 1px;
+	width: 220px;
+	height: 320px;
+	box-shadow: 2px 2px #D9D9D9;
+	margin-left: 100px;
+	float: left;
+}
+.card8{
+	background-color: #A72D3A;
+	border-style: solid;
+	border-color: #D9D9D9;
+	border-width: 1px;
+	width: 220px;
+	height: 320px;
+	box-shadow: 2px 2px #D9D9D9;
+	margin-left: 100px;
+	margin-right: 75px;
+	filter: contrast(80%);
+	float: left;
+}
+.botvermais{
+	float: left;
+	margin-left: 42.9%;
+	margin-top: 30px;
+	background-color: #161310;
+	border-radius: 8px;
+	border-style: none;
+	width: 200px;
+	height: 30px;
+	color: #FFF;
+	cursor: pointer;
+}
+.html{
+	padding-left: 47px;
+	padding-right: 47px;
+}
+.html-css{
+	margin-left: -5.5px;
+}
+.ruby{
+	padding-left: 34px;
+}
+.rails{
+	padding-left: 39px;
+}
+.info-card-5-6{
 	background-color: #FFF;
-	margin-top: 58.8%;
-	width: 99%;
-	height: 200%;
+	width: 220px;
+	height: 104px;
+	margin-top: 5px;
 }
-#comp{
-	position: absolute;
-	z-index: 5;
-	margin-left: 12.5%;
-	margin-top: 5%;
+.heroku{
+	margin-left: 33px;
 }
-#material{
-	position: absolute;
-	z-index: 6;
-	margin-top: 3.5%;
-	margin-left: 42%;
-	color: #F16529;
-	letter-spacing: 7px;
-	font-size: 17.5px;
+.info{
+	background-color: #FFF;
+	width: 220px;
+	height: 104px;
+	margin-top: 10px;
 }
-#text1{
-	font-size: normal;
-	color: #000;
-	letter-spacing: 0px;
-	margin-right: 24%;
-	text-align: justify;
-	font-size: 15px;
+.info-html-css{
+	background-color: #FFF;
+	width: 220px;
+	height: 104px;
+	margin-top: 10.5px;
 }
-#parte3{
-	z-index: 1;
-	position: absolute;
+.info-card8{
+	background-color: #FFF;
+	width: 220px;
+	height: 104px;
+	margin-top: 5px;
+}
+.info-card7{
+	background-color: #FFF;
+	width: 220px;
+	height: 104px;
+	margin-top: 10px;
+}
+.postado{
+	color: #FFF;
+	padding-left: 12px;
+}
+.postado2{
+	padding: 17px;
+}
+.postado3{
+	padding-left: 10px;
+	color: #FFF;
+}
+.postado4{
+	margin-top: -11px;
+	padding-left: 17px;
+	color: #FFF;
+}
+.postado7{
+	padding-left: 5px;
+	color: #FFF;
+}
+.bot-estudar{
+	background-color: #FF7F00;
+	border-radius: 8px;
+	border-style: none;
+	width: 200px;
+	height: 30px;
+	margin-left: 10px;
+	color: #FFF;
+	cursor: pointer;
+}
+nav{
+	margin-top: 0px;
+	filter: alpha(65%);
+	float: right;
+}
+nav li{
+	display: inline-block;
+	padding: 15px;
+	font-size: 18px;
+}
+.logo{
+	padding: 8px;
+}
+.header-title{
+	color: #FFF;
+	text-align: center;		
+	font-size: 52px;
+	margin-top: 13%;
+    text-shadow: 1px 1px #000;
+}
+.bot{
+	padding: 1%;
+	color: #FFF;
+	background-color: transparent;
+	font-size: 25px;
+	border-radius: 3px;
 	border-style: solid;
-	border-color: #E2E5EB;
-	border-width: 1.4px;
-	width: 99%;
-	height: 82%;
-	margin-top: 83%;
+	border-width: 4px;
+	border-color: #FFF;
+	letter-spacing: 1px;
+	margin-right: 5px;
+	font-weight: bold;
+	width: 300px;
+    text-shadow: 1px 1px #000;
+	cursor: pointer;
 }
-#titparte3{
-	color: #F16529;
-	letter-spacing: 7px;
-	font-size: 33px;
-
+footer{
+	background-color: #161310;
+	height: 20px;
+	padding: 25px;
 }
