--- a/css/style.css
+++ b/css/style.css
@@ -14,9 +14,13 @@ article{
 }
 .branco{
 	background-color: transparent;
+	border-style: solid;
+	border-color: black;
 	width: 20px;
 	height: 20px;
 	float: left;
+	margin-left: 35%;
+	margin-right: 35%;
 	margin-top: 70px;	
 	/* foi necessário adicionar essa class para poder colocar height: auto; na sections 2 e garantir que a recrursividade
 	funcionasse nela. Todavia, como tinha o auto, acrescentei uma div transparente, para que ele reconhecesse e deixasse a section 2
@@ -114,6 +118,7 @@ article{
 	height: 320px;
 	box-shadow: 2px 2px #D9D9D9;
 	margin-left: 49px;
+	margin-bottom: 10px;
 	float: left;
 }
 .card2{
@@ -125,6 +130,7 @@ article{
 	height: 320px;
 	box-shadow: 2px 2px #D9D9D9;
 	margin-left: 49px;
+	margin-bottom: 10px;
 	float: left;
 }
 .card3{
@@ -136,6 +142,7 @@ article{
 	height: 320px;
 	box-shadow: 2px 2px #D9D9D9;
 	margin-left: 49px;
+	margin-bottom: 10px;
 	float: left;
 }
 .card4{
@@ -148,6 +155,7 @@ article{
 	box-shadow: 2px 2px #D9D9D9;
 	margin-left: 49px;
 	margin-right: 80px;
+	margin-bottom: 10px;
 	float: left;
 }
 .card5{
@@ -159,6 +167,7 @@ article{
 	height: 320px;
 	box-shadow: 2px 2px #D9D9D9;
 	margin-left: 49px;
+	margin-bottom: 10px;
 	float: left;
 }
 .card6{
@@ -170,6 +179,7 @@ article{
 	height: 320px;
 	box-shadow: 2px 2px #D9D9D9;
 	margin-left: 49px;
+	margin-bottom: 10px;
 	float: left;
 }
 .card7{
@@ -181,6 +191,7 @@ article{
 	height: 320px;
 	box-shadow: 2px 2px #D9D9D9;
 	margin-left: 49px;
+	margin-bottom: 10px;
 	float: left;
 }
 .card8{
@@ -194,6 +205,7 @@ article{
 	margin-left: 49px;
 	margin-right: 80px;
 	filter: contrast(80%);
+	margin-bottom: 10px;
 	float: left;
 }
 .botvermais{
